--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,7 +5,7 @@
       </div>
       <div class="team">
       <p class="footer-text">Developed with</p>
-      <svg class="footer-icon" width="14" Height="14">
+      <svg class="footer-icon" width="14" height="14">
          <use href="./images/sprite.svg#vector"></use>
       </svg>
       <p class="footer-text footer-modal">by GoIT Students</p>
