--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,31 @@
-<h1>hi</h1>
+<header class="header">
+    <div class="container">
+        <div class="header-wrapper">
+            <div class="logo-wrap">
+                <a class="logo" href="">
+                    <svg width="24" height="24">
+                        <use href="/src/images/sprite.svg#icon-film"></use>
+                    </svg>
+                </a>
+                <h1 class="title">Filmoteka</h1>
+            </div>
+
+            <ul class="list-refs">
+                <li class="list-items">
+                    <a class="header-refs active" href="#">Home</a>
+                </li>
+                <li class="list-items">
+                    <a class="header-refs" href="">My Library</a>
+                </li>
+            </ul>
+        </div>
+        <form class="search-form" id="search-form">
+            <input class="search" type="text" name="searchQuery" autocomplete="off" placeholder="Search movies" />
+            <button class="btn-search" type="submit">
+                <svg class="icon-search" width="12" height="12">
+                    <use href="/src/images/sprite.svg#icon-search"></use>
+                </svg>
+            </button>
+        </form>
+    </div>
+</header>
