--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -18,8 +18,9 @@ img {
 	width: 480px;
 	}	
 	
-@media screen and (min-width:768px){
-	width: 768px;
+@media screen and (min-width: 768px) {
+padding-left: 32px; 
+padding-right: 32px;
 }
 @media screen and (min-width:1200px){
 	width: 1200px;
