--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,17 +2,19 @@
     <div class="container">
         <div class="header-wrapper">
             <div class="logo-wrap">
-                <a class="logo" href="">
+                <a class="logo-title" href="/src/index.html">
                     <svg width="24" height="24">
                         <use href="/src/images/sprite.svg#icon-film"></use>
                     </svg>
                 </a>
-                <h1 class="title">Filmoteka</h1>
+                <a href="/src/index.html">
+                    <h1 class="title">Filmoteka</h1>
+                </a>
             </div>
 
             <ul class="list-refs">
                 <li class="list-items">
-                    <a class="header-refs active" href="#">Home</a>
+                    <a class="header-refs active" href="/src/index.html">Home</a>
                 </li>
                 <li class="list-items">
                     <a class="header-refs" href="">My Library</a>
