--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,4 +3,4 @@
 @import './components/header';
 @import './base/base';
 @import './components/footer';
-@import './components/spiner'
+@import './components/spiner';
