--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -37,7 +37,8 @@ font-size: 16px;
 }
 .footer-icon {
    display: flex;
-   align-items: center;
+   // align-items: baseline;
+   margin-top: 3px;
    margin-left: 10px;
    margin-right: 10px;
 }
@@ -52,3 +53,8 @@ font-size: 16px;
    cursor: pointer;
    
 }}
+
+.close-modal {
+   border-radius: 360px;
+   color: rgba(84, 84, 84, 1);
+}
