--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,7 +17,7 @@
                     <a class="header-refs active" href="/src/index.html">Home</a>
                 </li>
                 <li class="list-items">
-                    <a class="header-refs" href="">My Library</a>
+                    <a class="header-refs refs-library" href="">My Library</a>
                 </li>
             </ul>
         </div>
