--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -122,3 +122,23 @@
   right: 0;
   top: 6px;
 }
+.list-btn {
+  display: flex;
+}
+.list-btn-item:first-child {
+  margin-right: 20px;
+}
+
+.btn {
+  font-size: 12px;
+  line-height: 1.3;
+  font-weight: 500;
+  color: #ffffff;
+  display: block;
+  width: 130px;
+  height: 44px;
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  border-radius: 5px;
+  text-transform: uppercase;
+}
