--- a/src/partials/footer-modal.html
+++ b/src/partials/footer-modal.html
@@ -1,5 +1,79 @@
 <div class="backdrop js-backdrop">
    <div class="modal">
 <button class="close-modal" data-action="close-modal">х</button>
+
+
+<ul class="card-conteiner">
+   <li class="card">
+      <img class="modal-img" src="./images/olya.jpeg" alt="Olya Zarichna">
+      <a href="https://github.com/Olyazarichna" target="_blank"><svg class="card-icon">
+         <use href="./images/sprite.svg#github"></use></svg></a>
+      <p class="card-name">Olya Zarichna</p>
+      <p class="card-position">Scrum Master</p>
+   </li>
+<li class="card">
+   <img class="modal-img" src="./images/vital.jpeg" alt="vitaliy Piddubchak">
+   <a href="https://github.com/Vitaliy28031985" target="_blank"><svg class="card-icon">
+      <use href="./images/sprite.svg#github"></use></svg></a>
+   <p class="card-name">Vitalii Piddubchak</p>
+   <p class="card-position">Developer</p>
+</li>
+<li class="card">
+   <img class="modal-img" src="./images/oxana.jpg" alt="Oxana Demova">
+   <a href="https://github.com/OxanaDemova" target="_blank"><svg class="card-icon">
+      <use href="./images/sprite.svg#github"></use></svg></a>
+   <p class="card-name">Oxana Demova</p>
+   <p class="card-position">Developer</p>
+</li>
+<li class="card">
+   <img class="modal-img" src="./images/olecsiy.jpeg" alt="Alexey Ckladanyuk">
+   <a href="#" target="_blank"><svg class="card-icon">
+      <use href="./images/sprite.svg#github"></use></svg></a>
+   <p class="card-name">Alexey Ckladanyuk</p>
+   <p class="card-position">Developer</p>
+</li>
+
+
+
+
+<li class="card">
+   <img class="modal-img" src="./images/ReznichenkoAndrii.jpg" alt="Reznichenko Andrii">
+   <a href="#" target="_blank"><svg class="card-icon">
+      <use href="./images/sprite.svg#github"></use></svg></a>
+   <p class="card-name">Reznichenko Andrii</p>
+   <p class="card-position">Developer</p>
+</li>
+<li class="card">
+   <img class="modal-img" src="./images/olecsiy.jpeg" alt="Alexey Ckladanyuk">
+   <a href="#" target="_blank"><svg class="card-icon">
+      <use href="./images/sprite.svg#github"></use></svg></a>
+   <p class="card-name">Alexey Ckladanyuk</p>
+   <p class="card-position">Developer</p>
+</li>
+<li class="card">
+   <img class="modal-img" src="./images/oxana.jpg" alt="vitaliy Piddubchak">
+   <a href="#" target="_blank"><svg class="card-icon">
+      <use href="./images/sprite.svg#github"></use></svg></a>
+   <p class="card-name">Oxana Demova</p>
+   <p class="card-position">Developer</p>
+</li>
+<li class="card">
+   <img class="modal-img" src="./images/olecsiy.jpeg" alt="vitaliy Piddubchak">
+   <a href="#" target="_blank"><svg class="card-icon">
+      <use href="./images/sprite.svg#github"></use></svg></a>
+   <p class="card-name">Alexey Ckladanyuk</p>
+   <p class="card-position">Developer</p>
+</li>
+<li class="card">
+   <img class="modal-img" src="./images/olecsiy.jpeg" alt="vitaliy Piddubchak">
+   <a href="#" target="_blank"><svg class="card-icon">
+      <use href="./images/sprite.svg#github"></use></svg></a>
+   <p class="card-name">Alexey Ckladanyuk</p>
+   <p class="card-position">Developer</p>
+</li>
+
+
+</ul>
+
    </div>
 </div>
