--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,6 +3,7 @@
 @import './components/header';
 @import './base/base';
 @import './components/footer';
+@import './components/movie-card';
 
 @import './components/footer-modal';
 
