--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -33,3 +33,19 @@ a {
 body{
     font-family: 'Roboto', sans-serif;
 }
+
+.visually-hidden {
+	position: absolute;
+
+	clip: rect(0 0 0 0);
+
+	width: 1px;
+
+	height: 1px;
+
+	margin: -1px;
+
+	padding: 0;
+
+	overflow: hidden;
+}
