--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,5 +6,6 @@
 @import './components/spiner';
 @import './components/gallery';
 @import './components/footer-modal';
+@import './components/upbtn';
 
 
