--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,5 +7,4 @@
 @import './components/gallery';
 @import './components/footer-modal';
 @import './components/upbtn';
-
-
+@import './components/pagination';
