--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,7 @@
-<section class="container">
-    <h2 class="visually-hidden">Films gallery</h2>
-    <ul class="cards">
-    </ul>
+<section class="gallery">
+    <div class="container">
+        <h2 class="visually-hidden">Films gallery</h2>
+        <ul class="cards">
+        </ul>
+    </div>
 </section>
