--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,43 +1,67 @@
+.gallery {
+  padding-top: 20px;
+  padding-bottom: 40px;
+}
+.cards {
+  @media screen and (max-width:767px) {
+      .movie_card:not(:last-child) {
+        margin-bottom: 20px;
+      }
+    }
 
+  @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+  }
 
-.cards{
-    display: flex;
-    flex-wrap: wrap;
-   justify-content:space-between;
 }
 
-.list__element {
+
+.list__img {
+  width: 280px;
+  height: 398px;
+  border-radius: 5px;
+
+  @media screen and (min-width: 768px) {
+    width: 336px;
+    height: 455px;
+  }
+
+  @media screen and (min-width: 1024px) {
     width: 309px;
     height: 449px;
-    border-radius: 5px;
+  }
+   
+  }
+
+  .info_title {
+    margin-top: 10px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.3;
+    text-transform: uppercase;
+    color: #000000;
+    max-width: 280px;
   }
 
  
   .info_genre {
-    margin-bottom: 10px;
+    display: block;
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
-    line-height: 16px;
+    line-height: 1.2;
     color: #ff6b01;
   }
 
 
-  .info_title {
-    margin-top: 8px;
-    margin-bottom: 5px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 14px;
-    text-transform: uppercase;
-  
-    color: #000000;
-  }
-
-  .visually-hidden{
-    visibility: hidden;
-    width: 0px;
-    height: 0px;
-    position: absolute;
-  }
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+}
