--- a/src/partials/footer-modal.html
+++ b/src/partials/footer-modal.html
@@ -1,9 +1,17 @@
 <div class="backdrop js-backdrop">
    <div class="modal">
-<button class="close-modal" data-action="close-modal">х</button>
-
+<button class="close-modal" data-action="close-modal">&#10006</button>
 
 <ul class="card-conteiner">
+   <li class="card">
+      <img class="modal-img" src="./images/maksym.jpeg" alt="vitaliy Piddubchak">
+      <a href="#" target="_blank"><svg class="card-icon">
+         <use href="./images/sprite.svg#github"></use></svg></a>
+      <p class="card-name">Maksym</p>
+      <p class="card-position">Team Lead</p>
+   </li>
+
+
    <li class="card">
       <img class="modal-img" src="./images/olya.jpeg" alt="Olya Zarichna">
       <a href="https://github.com/Olyazarichna" target="_blank"><svg class="card-icon">
@@ -27,52 +35,40 @@
 </li>
 <li class="card">
    <img class="modal-img" src="./images/olecsiy.jpeg" alt="Alexey Ckladanyuk">
-   <a href="#" target="_blank"><svg class="card-icon">
+   <a href="https://github.com/Skladaniuk" target="_blank"><svg class="card-icon">
       <use href="./images/sprite.svg#github"></use></svg></a>
    <p class="card-name">Alexey Ckladanyuk</p>
    <p class="card-position">Developer</p>
 </li>
-
-
-
 
 <li class="card">
    <img class="modal-img" src="./images/ReznichenkoAndrii.jpg" alt="Reznichenko Andrii">
-   <a href="#" target="_blank"><svg class="card-icon">
+   <a href="https://github.com/4ezeronnik" target="_blank"><svg class="card-icon">
       <use href="./images/sprite.svg#github"></use></svg></a>
-   <p class="card-name">Reznichenko Andrii</p>
+   <p class="card-name">Andrii Reznichenko</p>
    <p class="card-position">Developer</p>
 </li>
 <li class="card">
-   <img class="modal-img" src="./images/olecsiy.jpeg" alt="Alexey Ckladanyuk">
-   <a href="#" target="_blank"><svg class="card-icon">
+   <img class="modal-img" src="./images/andriiberezhko.jpeg" alt="Andrii Berezhko">
+   <a href="https://github.com/andriiberezhko" target="_blank"><svg class="card-icon">
       <use href="./images/sprite.svg#github"></use></svg></a>
-   <p class="card-name">Alexey Ckladanyuk</p>
+   <p class="card-name">Andrii Berezhko</p>
    <p class="card-position">Developer</p>
 </li>
 <li class="card">
-   <img class="modal-img" src="./images/oxana.jpg" alt="vitaliy Piddubchak">
-   <a href="#" target="_blank"><svg class="card-icon">
+   <img class="modal-img" src="./images/vladimir.jpeg" alt="Volodymyr Ganzelevskyi">
+   <a href="https://github.com/zganz" target="_blank"><svg class="card-icon">
       <use href="./images/sprite.svg#github"></use></svg></a>
-   <p class="card-name">Oxana Demova</p>
+   <p class="card-name">Volodymyr Ganzelevskyi</p>
    <p class="card-position">Developer</p>
 </li>
 <li class="card">
-   <img class="modal-img" src="./images/olecsiy.jpeg" alt="vitaliy Piddubchak">
-   <a href="#" target="_blank"><svg class="card-icon">
+   <img class="modal-img" src="./images/maxsim.jpeg" alt="Maxim Afanasiev">
+   <a href="https://github.com/MaksimAfanasiev" target="_blank"><svg class="card-icon">
       <use href="./images/sprite.svg#github"></use></svg></a>
-   <p class="card-name">Alexey Ckladanyuk</p>
+   <p class="card-name">Maksym Afanasiev</p>
    <p class="card-position">Developer</p>
 </li>
-<li class="card">
-   <img class="modal-img" src="./images/olecsiy.jpeg" alt="vitaliy Piddubchak">
-   <a href="#" target="_blank"><svg class="card-icon">
-      <use href="./images/sprite.svg#github"></use></svg></a>
-   <p class="card-name">Alexey Ckladanyuk</p>
-   <p class="card-position">Developer</p>
-</li>
-
-
 </ul>
 
    </div>
