--- a/src/sass/components/_footer-modal.scss
+++ b/src/sass/components/_footer-modal.scss
@@ -15,8 +15,8 @@ body.show-modal .modal {
    position: fixed;
    top: 0;
    left: 0;
-   width: 100vw;
-   height: 100vw;
+   width: 100%;
+   height: 100%;
    background-color: rgba(0, 0, 0, 0.3);
    z-index: 999;
 
@@ -28,27 +28,30 @@ body.show-modal .modal {
 
 .modal {
    padding: 30px;
-   border-radius: 8px;
-   // max-width: 840px;
+   border-radius: 10px;
    width: 90%;
    height: 90%;
-   // min-height: 520px;
    background-color: #fff;
    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 
    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 
    0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 
-   overflow-y: scroll;
+   
+   overflow: auto;
    transform: scale(1.1);
    transition: transform 250ms ease-in-out;
+   scroll-behavior: smooth;
 }
 
+
 .close-modal {
-   margin-bottom: 15px;
-   border-radius: 360px;
-   width: 25px;
+   position: absolute;
+   top: 10px;
+   right: 20px;
+   border-radius: 50%;
+   width: 30px;
    font-family: 'Roboto';
-   font-weight: 400;
+   font-weight: 200;
    text-align: center;
    font-size: 20px;
    color: rgba(84, 84, 84, 1);
@@ -68,8 +71,10 @@ body.show-modal .modal {
    
    display: flex;
    flex-wrap: wrap;
+   justify-content: center;
    margin-left: -20px;
-   margin-bottom: -20px;   
+   margin-bottom: -20px;
+   margin-top: 20px;   
    }
    
    .card {
@@ -80,9 +85,8 @@ body.show-modal .modal {
       margin-bottom: 20px;
       padding-bottom: 20px;
       background-color: #F7F7F7;
-      // max-width: 250px;
       width: 200px;
-      border-radius: 10px;
+      border-radius: 27% 5% 5% 5%;
       box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 
       0px 1px 1px 0px rgba(0, 0, 0, 0.14), 
       0px 2px 1px -1px rgba(0, 0, 0, 0.12);
@@ -90,21 +94,34 @@ body.show-modal .modal {
          justify-content: center;
          width: 300px;
          }
-         // @media screen and (min-width: 768px) { 
-         //    width: 300px;
-         //    }
+         @media screen and (min-width: 755px) { 
+            width: 200px;
+            }
+            
+            &:focus, &:hover {
+               background-color: #dbd9d9;
+               // cursor: pointer;
+            }
    }
    .card-icon {
       position: absolute;
       width: 40px;
+      height: 40px;
       fill: #545454;
-      top: 180px;
+      top: 240px;
       right: 10px;
       transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
       &:focus, &:hover {
          fill: #FF6B08;
          cursor: pointer; 
       } 
+      @media screen and (max-width: 755px) { 
+      top: 350px;
+      right: 10px;
+      width: 50px;
+      height: 50px;
+         
+            }
    }
    
    .card-name {
@@ -114,6 +131,11 @@ body.show-modal .modal {
    text-align: center;
    font-size: 15px;
    margin-bottom: 10px;
+   @media screen and (max-width: 755px) { 
+      font-weight: 700;
+      font-size: 20px;
+      margin-bottom: 15px;
+      }
    }
    .card-position {
    font-family: 'Roboto';
@@ -121,9 +143,21 @@ body.show-modal .modal {
    font-weight: 400;
    font-size: 14px;
    text-align: center;
+   padding-bottom: 10px;
+
+   @media screen and (max-width: 755px) { 
+      font-weight: 700;
+      font-size: 18px;
+      padding-bottom: 15px;
+      }
    }
    .modal-img {
       width: 100%;
       height: 200px;
+      border-radius: 30% 5%;
       margin-bottom: 15px;
+      @media screen and (max-width: 755px) { 
+      height: 300px;
+      
+         }
    }
