--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,9 +1,15 @@
 .gallery {
   padding-top: 20px;
   padding-bottom: 40px;
+
+  @media screen and (min-width: 768px){
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
+
 .cards {
-  @media screen and (max-width:767px) {
+  @media screen and (max-width: 767px) {
       .movie_card:not(:last-child) {
         margin-bottom: 20px;
       }
@@ -12,8 +18,26 @@
   @media screen and (min-width: 768px) {
       display: flex;
       flex-wrap: wrap;
+      margin-left: calc(-1 * 32px);
+      margin-bottom: calc(-1 * 32px);
   }
 
+  @media screen and(min-width: 1024px)  {
+    margin-left: calc(-1 * 16px);
+  }
+
+}
+
+.movie_card {
+  @media screen and (min-width: 768px) {
+    margin-left: 32px;
+    margin-bottom: 32px;
+    
+  }
+
+  @media screen and (min-width: 1024px) {
+    margin-left: 16px;
+  }
 }
 
 
@@ -43,6 +67,11 @@
     text-transform: uppercase;
     color: #000000;
     max-width: 280px;
+
+    @media screen and (min-width:768px){
+      margin-top: 8px;
+      line-height: 1.2;  
+    }
   }
 
  
