--- a/src/sass/components/_footer-modal.scss
+++ b/src/sass/components/_footer-modal.scss
@@ -20,11 +20,14 @@ body.show-modal .modal {
    background-color: rgba(0, 0, 0, 0.3);
    z-index: 999;
 
+   overflow: auto;
    pointer-events: none;
    opacity: 0;
    visibility: hidden;
    transition: opacity 250ms ease-in-out, visibility 250ms ease-in-out;
 }
+
+
 
 .modal {
    padding: 30px;
@@ -73,7 +76,7 @@ body.show-modal .modal {
    flex-wrap: wrap;
    justify-content: center;
    margin-left: -20px;
-   margin-bottom: -20px;
+   margin-bottom: -40px;
    margin-top: 20px;   
    }
    
@@ -81,9 +84,9 @@ body.show-modal .modal {
       display: block;
       position: relative;
       // flex-basis: calc((100% - 60px) / 3);
-      margin-left: 20px;
+      margin-left: 40px;
       margin-bottom: 20px;
-      padding-bottom: 20px;
+      padding-bottom: 30px;
       background-color: #F7F7F7;
       width: 200px;
       border-radius: 27% 5% 5% 5%;
@@ -143,7 +146,7 @@ body.show-modal .modal {
    font-weight: 400;
    font-size: 14px;
    text-align: center;
-   padding-bottom: 10px;
+  
 
    @media screen and (max-width: 755px) { 
       font-weight: 700;
