--- a/src/sass/components/_spiner.scss
+++ b/src/sass/components/_spiner.scss
@@ -1,10 +1,10 @@
-.spiner_block{
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.5);
-    top: 0;
-}
+// .spiner_block{
+//     width: 100vw;
+//     height: 100vh;
+//     position: absolute;
+//     background-color: rgba(0, 0, 0, 0.5);
+//     top: 0;
+// }
 
 .loader {
     position: relative;
@@ -15,7 +15,7 @@
     height: 50px;
     border-radius: 50%;
     display: inline-block;
-    border-top: 4px solid #FFF;
+    border-top: 4px solid rgb(255, 251, 2);
     border-right: 4px solid transparent;
     box-sizing: border-box;
     animation: rotation 1s linear infinite;
@@ -31,7 +31,7 @@
     width: 48px;
     height: 48px;
     border-radius: 50%;
-    border-bottom: 4px solid #FF3D00;
+    border-bottom: 4px solid #397eff;
     border-left: 4px solid transparent;
 }
 
