--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,4 +8,4 @@
 @import './components/footer-modal';
 @import './components/upbtn';
 @import './components/slider';
-
+@import './components/youtube';
