--- a/src/sass/components/_footer-modal.scss
+++ b/src/sass/components/_footer-modal.scss
@@ -8,6 +8,11 @@ body.show-modal .modal {
    transform: scale(1);
 }
 
+.is-hidden {
+   opacity: 0;
+   pointer-events: none;  
+}
+
 .backdrop {
    display: flex;
    justify-content: center;
@@ -39,8 +44,8 @@ body.show-modal .modal {
    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 
    0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 
+  
    
-   overflow: auto;
    transform: scale(1.1);
    transition: transform 250ms ease-in-out;
    scroll-behavior: smooth;
