--- a/src/sass/components/_footer-modal.scss
+++ b/src/sass/components/_footer-modal.scss
@@ -8,10 +8,10 @@ body.show-modal .modal {
    transform: scale(1);
 }
 
-.is-hidden {
-   opacity: 0;
-   pointer-events: none;  
-}
+// .is-hidden {
+//    opacity: 0;
+//    pointer-events: none;  
+// }
 
 .backdrop {
    display: flex;
@@ -32,8 +32,6 @@ body.show-modal .modal {
    transition: opacity 250ms ease-in-out, visibility 250ms ease-in-out;
 }
 
-
-
 .modal {
    padding: 30px;
    border-radius: 10px;
@@ -45,11 +43,17 @@ body.show-modal .modal {
    0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 
   
-   
+   overflow: auto;
    transform: scale(1.1);
    transition: transform 250ms ease-in-out;
    scroll-behavior: smooth;
 }
+
+// .is-hidden {
+//    opacity: 0;
+//    display: none;
+//    pointer-events: none;  
+// }
 
 
 .close-modal {
@@ -88,7 +92,7 @@ body.show-modal .modal {
    .card {
       display: block;
       position: relative;
-      // flex-basis: calc((100% - 60px) / 3);
+      
       margin-left: 40px;
       margin-bottom: 20px;
       padding-bottom: 30px;
