--- a/src/partials/footer-modal.html
+++ b/src/partials/footer-modal.html
@@ -1,8 +1,10 @@
 <div class="backdrop js-backdrop">
    <div class="modal container">
-<button class="close-modal" data-action="close-modal">&#10006</button>
+<button class="close-modal" data-action="close-modal">&times</button>
 <ul class="card-conteiner">
 </ul>
 
    </div>
 </div>
+<!-- &#10006 
+&times-->
