--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -11,37 +11,37 @@
   color: #000000;
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.333;
+  line-height: 1.333 !important;
 }
 
 .tui-pagination .tui-page-btn {
-  font-weight: 500;
-  line-height: 1.333;
-  border: none;
-  border-radius: 5px;
-  width: 38px;
-  height: 38px;
-  padding-top: 13px;
+  font-weight: 500 !important;
+  line-height: 1.333 !important;
+  border: none !important;
+  border-radius: 5px !important;
+  width: 38px !important;
+  height: 38px !important;
+  padding-top: 13px !important;
   transition: 300ms;
 
-  @media screen and (min-width: 320px) {
-    width: 40px;
-    height: 40px;
+  @media screen and (min-width: 768px) {
+    width: 40px !important;
+    height: 40px !important;
   }
 
   &:hover,
   &:focus {
-    background-color: #f7f7f7;
+    background-color: #f7f7f7 !important;
   }
 }
 
 .tui-pagination .tui-page-btn.tui-is-selected {
-  color: #fff;
+  color: #fff !important;
   background: #ff6b08;
 
   &:hover,
   &:focus {
-    background-color: #ff6b08;
+    background-color: #ff6b08 !important;
   }
 }
 
@@ -54,13 +54,13 @@
   }
 
   background: #f7f7f7;
-  margin-right: 5px;
-  margin-left: 5px;
-  padding-top: 14px;
+  margin-right: 5px !important;
+  margin-left: 5px !important;
+  padding-top: 14px !important;
 
   &:hover,
   &:focus {
-    background-color: #f7f7f7;
+    background-color: #f7f7f7 !important;
   }
 }
 
@@ -69,18 +69,18 @@
   display: inline-block;
 
   background: #f7f7f7;
-  padding: 15px 15px;
+  padding: 15px 15px !important;
 
   &:hover,
   &:focus {
-    background-color: #f7f7f7;
+    background-color: #f7f7f7 !important;
   }
 }
 
 .tui-pagination .tui-page-btn.tui-prev-is-ellip,
 .tui-pagination .tui-page-btn.tui-next-is-ellip {
   display: none;
-  padding: 4px 12px;
+  padding: 4px 12px !important;
 
   @media screen and (min-width: 768px) {
     display: inline-block;
@@ -88,6 +88,6 @@
 
   &:hover,
   &:focus {
-    background-color: #f7f7f7;
+    background-color: #f7f7f7 !important;
   }
 }
