--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,3 +10,4 @@
 @import './components/slider';
 @import './components/youtube';
 @import './components/pagination';
+@import './components/gallery-modal';
