--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="header-wrapper">
             <a class="logo-title" href="/src/index.html">
-                <svg width="24" height="24">
+                <svg class="logo-icon" width="24" height="24">
                     <use href="/src/images/sprite.svg#icon-film"></use>
                 </svg>
                 <h1 class="title">Filmoteka</h1>
