--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -81,6 +81,13 @@
   display: flex;
   align-items: center;
 }
+.logo-icon {
+  stroke: #818181;
+}
+.logo-icon:hover,
+.logo-icon:focus {
+  stroke: #ff6b08;
+}
 .title {
   display: none;
   margin-left: 8px;
@@ -95,6 +102,11 @@
     margin-left: 10px;
   }
 }
+.title:hover,
+.title:focus {
+  color: #ff6b08;
+}
+
 .header-wrapper {
   margin-bottom: 54px;
   display: flex;
@@ -109,6 +121,10 @@
 }
 .list-items:not(:last-child) {
   margin-right: 40px;
+}
+.header-refs:hover,
+.header-refs:focus {
+  color: #ff6b08;
 }
 .header-refs {
   position: relative;
