Add buttons styles
Add selector isActive for Library buttons and btn_disabled selector for modal buttons

--- a/src/sass/components/_gallery-modal.scss
+++ b/src/sass/components/_gallery-modal.scss
@@ -183,6 +183,11 @@
   list-style: none;
 }
 
+.btn_disabled {
+  background-color: grey;
+  pointer-events: none;
+}
+
 @media screen and (min-width: 768px) {
   .modal-card {
     background-color: #ffffff;
