--- a/src/sass/components/_gallery-modal.scss
+++ b/src/sass/components/_gallery-modal.scss
@@ -139,8 +139,11 @@
 
   margin-top: 18px;
 }
-.btn_add__watched {
+
+.modal-film__list-button li:not(:last-child){
   margin-right: 15px;
+}
+.btn_add__watched {
   width: 110px;
   height: 44px;
 }
@@ -253,6 +256,6 @@
   cursor: pointer;
   color: #ffffff;
   background-color:#ff6b01;
-  transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-  border 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
