--- a/src/sass/components/_gallery-modal.scss
+++ b/src/sass/components/_gallery-modal.scss
@@ -5,7 +5,7 @@
     left: 0;
     background-color: #ffffff;
     width: 280px;
-    height: 940px;
+    height: 100%;
     margin-top: 20px;
     align-items: center;
     padding: 48px 20px 40px 20px;
@@ -91,12 +91,20 @@
   color: rgb(0, 0, 0);
   font-weight: 500;
 }
-
+.modal-film__original-title{
+  min-width: 108px;
+}
+.title-item{
+  display: flex;
+}
 .original_title {
+  font-family: Roboto;
+  font-size: 12px;
+  line-height: 1.33;
   text-transform: uppercase;
   color: rgb(0, 0, 0);
   font-weight: 500;
-  margin-left: 39px;
+  margin-left: 13px;
 }
 
 
@@ -242,6 +250,6 @@
   cursor: pointer;
   color: #ffffff;
   background-color:#ff6b01;
-  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1),
-  color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
