--- a/src/sass/components/_gallery-modal.scss
+++ b/src/sass/components/_gallery-modal.scss
@@ -253,3 +253,13 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.basicLightbox {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    align-items: stretch;
+  }
+  @media screen and (min-width: 768px) {
+    align-items: center;
+  }
+  overflow-y: scroll;
+}
