--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
 
             <ul class="list-refs">
                 <li class="list-items">
-                    <a class="header-refs active" href="/src/index.html">Home</a>
+                    <a class="header-refs active" href="">Home</a>
                 </li>
                 <li class="list-items">
                     <a class="header-refs refs-library" href="">My Library</a>
@@ -20,9 +20,7 @@
         <form class="search-form" id="search-form">
             <input class="search" type="text" name="searchQuery" autocomplete="off" placeholder="Search movies" />
             <button class="btn-search" type="submit">
-                <svg class="icon-search" width="12" height="12">
-                    <use href="/src/images/sprite.svg#icon-search"></use>
-                </svg>
+                
             </button>
         </form>
     </div>
