--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  height: 230px;
   margin: 0 auto;
   padding-top: 40px;
   padding-bottom: 92px;
@@ -27,6 +28,7 @@
     }
   }
   @media screen and (min-width: 1024px) {
+    height: 216px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
       url(/src/images/deskheader-1x.jpg);
     @media (min-device-pixel-ratio: 2),
@@ -162,6 +164,7 @@
   width: 100%;
   transition: background-color 500ms;
 }
+
 .search:hover,
 .search:focus {
   outline: none;
@@ -176,14 +179,25 @@
   color: #ffffff;
 }
 .btn-search {
-  border: none;
-  background-color: transparent;
-}
-.icon-search {
+  width: 12px;
+  height: 12px;
   position: absolute;
+  z-index: 10;
   right: 4px;
   top: 10px;
+  border: none;
+  cursor: pointer;
+  background-image: url(/src/images/search.svg);
+  background-size: cover;
+  background-color: transparent;
 }
+// .icon-search {
+//   width: 12px;
+//   position: relative;
+//   // z-index: 10;
+//   // right: 4px;
+//   // top: 10px;
+// }
 .list-btn {
   display: flex;
   justify-content: space-between;
