--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,3 +1,19 @@
+html {
+   height: 100%;
+ }
+ body {
+   min-height: 100%;
+   min-width: 100%;
+   display: grid;
+   grid-template-rows: 1fr auto;
+ }
+
+.footer {
+   grid-row-start: 2;
+   grid-row-end: 3;
+ }
+
+
 
 .footer-conteiner {
 background-color: #F7F7F7;
@@ -6,6 +22,8 @@ padding-bottom: 30px;
 @media screen and (min-width: 768px) {
 display: flex;
 justify-content: center;
+
+// min-height: calc(100vh - 80px);
    }
 }
 .team {
