--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,12 +1,12 @@
-html {
-   height: 100%;
- }
- body {
-   min-height: 100%;
-   min-width: 100%;
-   display: grid;
-   grid-template-rows: 1fr auto;
- }
+// html {
+//    height: 100%;
+//  }
+//  body {
+//    min-height: 100%;
+//    min-width: 100%;
+//    display: grid;
+//    grid-template-rows: 1fr auto;
+//  }
 
 .footer {
    grid-row-start: 2;
