--- a/src/sass/components/_footer-modal.scss
+++ b/src/sass/components/_footer-modal.scss
@@ -70,10 +70,10 @@ body.show-modal .modal {
    color: rgba(84, 84, 84, 1);
    background-color: #fff;
    border: 0;
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    &:hover, &:focus {
       color: #fff;
       background-color: #FF6B08;
-      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
       cursor: pointer; 
    }
 }
@@ -103,6 +103,7 @@ body.show-modal .modal {
       box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 
       0px 1px 1px 0px rgba(0, 0, 0, 0.14), 
       0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
       
       @media screen and (max-width: 478px) { 
          justify-content: center;
