--- a/src/sass/components/_gallery-modal.scss
+++ b/src/sass/components/_gallery-modal.scss
@@ -5,11 +5,11 @@
     left: 0;
     background-color: #ffffff;
     width: 280px;
-    height: 100%;
+    height: 100vh;
     margin-top: 20px;
     align-items: center;
     padding: 48px 20px 40px 20px;
-    overflow-y: auto;
+    overflow-y: scroll;
   }
   .modal-film__title {
     margin-top: 20px;
@@ -188,6 +188,8 @@
     margin-top: 0px;
     display: flex;
     padding: 40px 72px 40px 36px;
+    align-items: center;
+    
   }
 
   .image {
@@ -254,12 +256,3 @@
   color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.basicLightbox {
-  @media screen and (min-width: 320px) and (max-width: 767px) {
-    align-items: stretch;
-  }
-  @media screen and (min-width: 768px) {
-    align-items: center;
-  }
-  overflow-y: scroll;
-}
