--- a/src/partials/footer-modal.html
+++ b/src/partials/footer-modal.html
@@ -1,6 +1,6 @@
 <div class="backdrop js-backdrop">
    <div class="modal container">
-<button class="close-modal" data-action="close-modal">&times</button>
+<button class="close-modal" data-action="close-modal">&times;</button>
 <ul class="card-conteiner">
 </ul>
 
