--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,10 +10,10 @@
 
             <ul class="list-refs">
                 <li class="list-items">
-                    <a class="header-refs active" href="">Home</a>
+                    <a class="header-refs active" href="#">Home</a>
                 </li>
                 <li class="list-items">
-                    <a class="header-refs refs-library" href="">My Library</a>
+                    <a class="header-refs refs-library" href="#">My Library</a>
                 </li>
             </ul>
         </div>
