--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -13,7 +13,11 @@
 //    grid-row-end: 3;
 //  }
 
-
+.footer-wrap{
+   position: absolute;
+   // bottom: -100%;
+   width: 100%;
+}
 
 .footer-conteiner {
 background-color: #F7F7F7;
