--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="footer-wrap">
    <div class="footer-conteiner">
       <div class="rights">
          <p class="footer-text">&copy; 2022 | All Rights Reserved |&nbsp;</p>
