--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -33,7 +33,7 @@
   position: relative;
   width: 40px;
   height: 40px;
-  padding: 13px 13px 11px 13px;
+  padding-top: 13px;
   color: #000000;
   border: transparent;
   font-weight: 500;
