--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header content">
     <div class="container">
         <div class="header-wrapper">
             <a class="logo-title" href="/src/index.html">
