--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,20 +1,14 @@
-// html {
-//    height: 100%;
-//  }
-//  body {
-//    min-height: 100%;
-//    min-width: 100%;
-//    display: grid;
-//    grid-template-rows: 1fr auto;
-//  }
-
-// .footer {
-//    grid-row-start: 2;
-//    grid-row-end: 3;
-//  }
-
-
-
+html, body {
+   height: 100%;
+ }
+ body {
+    display: flex;
+    flex-direction: column;
+   // min-height: 100%;
+   // min-width: 100%;
+   // display: grid;
+   // grid-template-rows: 1fr auto;
+ }
 .footer-conteiner {
 background-color: #F7F7F7;
 padding-top: 30px;
@@ -23,7 +17,6 @@ padding-bottom: 30px;
 display: flex;
 justify-content: center;
 
-// min-height: calc(100vh - 80px);
    }
 }
 .team {
@@ -73,7 +66,8 @@ font-size: 16px;
 }}
 
 .footer-wrap{
-   position: absolute;
-   width: 100%;
-   bottom: 0;
+   flex-shrink: 0;
+}
+.content {
+   flex: 1 0 auto;
 }
