--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -204,7 +204,7 @@
   border: none;
   cursor: pointer;
   background-image: url(/src/images/search.svg);
-  background-size: cover;
+  // background-size: cover;
   background-color: transparent;
 }
 // .icon-search {
